Completed Step 1 Process and added Step 2 UI